--- a/telas/index.html
+++ b/telas/index.html
@@ -10,15 +10,15 @@
     <link rel="icon" href="../assets/img/pageIcon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
-</head>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
+  </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <nav class="navbar navbar-brand navbar-light bg-light">
                 <div class="container-fluid">
                   <a class="navbar-brand" href="index.html">
-                    <img src="../assets/img/pageIcon.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+                    <img src="../assets/img/homeIcon.png" alt="" width="30" height="24" class="d-inline-block align-text-bottom">
                     Cat - Fotos de Gatos
                   </a>
                 </div>
@@ -44,6 +44,10 @@
           </div>
         </div>
     </nav>
+
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="../assets/js/APIcontroller.js"></script>
 </body>
