--- a/telas/specific.html
+++ b/telas/specific.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -18,7 +18,7 @@
             <nav class="navbar navbar-brand navbar-light bg-light">
                 <div class="container-fluid">
                   <a class="navbar-brand" href="index.html">
-                    <img src="../assets/img/pageIcon.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+                    <img src="../assets/img/specificIcon.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
                     Cat - Fotos de Gatos
                   </a>
                 </div>
