--- a/telas/index.html
+++ b/telas/index.html
@@ -18,8 +18,8 @@
             <nav class="navbar navbar-brand navbar-light bg-light">
                 <div class="container-fluid">
                   <a class="navbar-brand" href="index.html">
-                    <img src="../assets/img/homeIcon.png" alt="" width="30" height="24" class="d-inline-block align-text-bottom">
-                    Cat - Fotos de Gatos
+                    <img src="../assets/img/homeIcon.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+                    Cat - Home
                   </a>
                 </div>
               </nav>
