--- a/telas/random.html
+++ b/telas/random.html
@@ -19,7 +19,7 @@
                 <div class="container-fluid">
                   <a class="navbar-brand" href="index.html">
                     <img src="../assets/img/randomIcon.jfif" alt="" width="30" height="24" class="d-inline-block align-text-top">
-                    Cat - Fotos de Gatos
+                    Cat - Aleatório
                   </a>
                 </div>
               </nav>
