--- a/telas/specific.html
+++ b/telas/specific.html
@@ -19,7 +19,7 @@
                 <div class="container-fluid">
                   <a class="navbar-brand" href="index.html">
                     <img src="../assets/img/specificIcon.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
-                    Cat - Específico
+                    Cat - Fotos
                   </a>
                 </div>
               </nav>
@@ -44,6 +44,8 @@
           </div>
         </div>
     </nav>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="../assets/js/APIcontroller.js"></script>
 
