--- a/telas/index.html
+++ b/telas/index.html
@@ -29,7 +29,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="index.html">| Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="random.html">Aleatório</a>
@@ -45,7 +45,9 @@
         </div>
     </nav>
 
-
+    <main>
+      <h1 class="text-light mt-5 text-center main__texto">Cat - Fotos de gatos</h1>
+    </main>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
