--- a/telas/multiple.html
+++ b/telas/multiple.html
@@ -38,12 +38,17 @@
                 <a class="nav-link" href="specific.html">Específico</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="multiple.html">Múltiplos</a>
+                <a class="nav-link active" href="multiple.html">| Múltiplos</a>
               </li>
             </ul>
           </div>
         </div>
     </nav>
+
+    <main>
+      <h1 class="text-light mt-5 text-center main__texto">Múltiplos</h1>
+    </main>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="../assets/js/APIcontroller.js"></script>
 
