--- a/telas/random.html
+++ b/telas/random.html
@@ -32,7 +32,7 @@
                 <a class="nav-link" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="random.html">Aleatório</a>
+                <a class="nav-link active" href="random.html">| Aleatório</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="specific.html">Específico</a>
@@ -44,6 +44,11 @@
           </div>
         </div>
     </nav>
+
+    <main>
+      <h1 class="text-light mt-5 text-center main__texto">Aleatório</h1>
+    </main>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="../assets/js/APIcontroller.js"></script>
 
