--- a/telas/specific.html
+++ b/telas/specific.html
@@ -35,7 +35,7 @@
                 <a class="nav-link" href="random.html">Aleatório</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="specific.html">Específico</a>
+                <a class="nav-link active" href="specific.html">| Específico</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="multiple.html">Múltiplos</a>
@@ -45,6 +45,9 @@
         </div>
     </nav>
 
+    <main>
+      <h1 class="text-light mt-5 text-center main__texto">Específico</h1>
+    </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="../assets/js/APIcontroller.js"></script>
