Base dos cartões da página principal.

--- a/telas/index.html
+++ b/telas/index.html
@@ -47,6 +47,41 @@
 
     <main>
       <h1 class="text-light mt-5 text-center main__texto">Cat - Fotos de gatos</h1>
+
+      <section class="text-center d-flex flex-row justify-content-center flex-wrap align-items-center">
+        <div class="row">
+          <div class="col">
+            <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src="..." alt="Gato aleatório">
+              <div class="card-body">
+                <h5 class="card-title">Aleatório</h5>
+                <p class="card-text">Veja a foto de um gato aleatório</p>
+                <a href="../telas/random.html" class="btn btn-primary">Ir até a página</a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src="..." alt="Gato específico">
+              <div class="card-body">
+                <h5 class="card-title">Específico</h5>
+                <p class="card-text">Veja a foto de um gato específico</p>
+                <a href="../telas/specific.html" class="btn btn-primary">Ir até a página</a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card" style="width: 18rem;">
+              <img class="card-img-top" src="..." alt="Vários gatos">
+              <div class="card-body">
+                <h5 class="card-title">Vários</h5>
+                <p class="card-text">Veja a foto de vários gatos</p>
+                <a href="../telas/multiple.html" class="btn btn-primary">Ir até a página</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
 
