Adicionado imagens dos cards da página principal

--- a/telas/index.html
+++ b/telas/index.html
@@ -52,7 +52,7 @@
         <div class="row">
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img class="card-img-top" src="..." alt="Gato aleatório">
+              <img class="card-img-top" src="../assets/img/randomCardImage.png" alt="Gato aleatório">
               <div class="card-body">
                 <h5 class="card-title">Aleatório</h5>
                 <p class="card-text">Veja a foto de um gato aleatório</p>
@@ -62,7 +62,7 @@
           </div>
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img class="card-img-top" src="..." alt="Gato específico">
+              <img class="card-img-top" src="../assets/img/specificCardImage.jpg" alt="Gato específico">
               <div class="card-body">
                 <h5 class="card-title">Específico</h5>
                 <p class="card-text">Veja a foto de um gato específico</p>
@@ -72,7 +72,7 @@
           </div>
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img class="card-img-top" src="..." alt="Vários gatos">
+              <img class="card-img-top" src="../assets/img/multipleCardImage.jpg" alt="Vários gatos">
               <div class="card-body">
                 <h5 class="card-title">Vários</h5>
                 <p class="card-text">Veja a foto de vários gatos</p>
