Mudança de cores dos botões

--- a/telas/index.html
+++ b/telas/index.html
@@ -56,7 +56,7 @@
               <div class="card-body">
                 <h5 class="card-title">Aleatório</h5>
                 <p class="card-text">Veja a foto de um gato aleatório</p>
-                <a href="../telas/random.html" class="btn btn-primary">Ir até a página</a>
+                <a href="../telas/random.html" class="btn btn-warning">Ir até a página</a>
               </div>
             </div>
           </div>
@@ -66,7 +66,7 @@
               <div class="card-body">
                 <h5 class="card-title">Específico</h5>
                 <p class="card-text">Veja a foto de um gato específico</p>
-                <a href="../telas/specific.html" class="btn btn-primary">Ir até a página</a>
+                <a href="../telas/specific.html" class="btn btn-warning">Ir até a página</a>
               </div>
             </div>
           </div>
@@ -76,7 +76,7 @@
               <div class="card-body">
                 <h5 class="card-title">Vários</h5>
                 <p class="card-text">Veja a foto de vários gatos</p>
-                <a href="../telas/multiple.html" class="btn btn-primary">Ir até a página</a>
+                <a href="../telas/multiple.html" class="btn btn-warning">Ir até a página</a>
               </div>
             </div>
           </div>
