Elementos do cartão ajeitados

--- a/telas/index.html
+++ b/telas/index.html
@@ -51,7 +51,7 @@
       <section class="text-center d-flex flex-row justify-content-center flex-wrap align-items-center">
         <div class="row">
           <div class="col">
-            <div class="card" style="width: 18rem;">
+            <div class="card h-100" style="width: 18rem;">
               <img class="card-img-top" src="../assets/img/randomCardImage.png" alt="Gato aleatório">
               <div class="card-body">
                 <h5 class="card-title">Aleatório</h5>
@@ -61,7 +61,7 @@
             </div>
           </div>
           <div class="col">
-            <div class="card" style="width: 18rem;">
+            <div class="card h-100" style="width: 18rem;">
               <img class="card-img-top" src="../assets/img/specificCardImage.jpg" alt="Gato específico">
               <div class="card-body">
                 <h5 class="card-title">Específico</h5>
@@ -71,11 +71,11 @@
             </div>
           </div>
           <div class="col">
-            <div class="card" style="width: 18rem;">
+            <div class="card h-100" style="width: 18rem;">
               <img class="card-img-top" src="../assets/img/multipleCardImage.jpg" alt="Vários gatos">
               <div class="card-body">
                 <h5 class="card-title">Vários</h5>
-                <p class="card-text">Veja a foto de vários gatos</p>
+                <p class="card-text">Veja a foto de vários gatos ao mesmo tempo</p>
                 <a href="../telas/multiple.html" class="btn btn-warning">Ir até a página</a>
               </div>
             </div>
