Mudado o propósito do site inteiro

--- a/telas/index.html
+++ b/telas/index.html
@@ -18,8 +18,8 @@
             <nav class="navbar navbar-brand navbar-light bg-light">
                 <div class="container-fluid">
                   <a class="navbar-brand" href="index.html">
-                    <img src="../assets/img/homeIcon.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
-                    Cat - Fotos
+                    <img src="../assets/img/pageIcon.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+                    Cat - Gatos desaparecidos
                   </a>
                 </div>
               </nav>
@@ -32,13 +32,13 @@
                 <a class="nav-link active" aria-current="page" href="index.html">| Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="random.html">Aleatório</a>
+                <a class="nav-link" href="add.html">Adicionar</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="specific.html">Específico</a>
+                <a class="nav-link" href="pesquisar.html">Pesquisar</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="multiple.html">Múltiplos</a>
+                <a class="nav-link" href="sobre.html">Sobre</a>
               </li>
             </ul>
           </div>
@@ -46,37 +46,37 @@
     </nav>
 
     <main>
-      <h1 class="text-light mt-5 text-center main__texto">Cat - Fotos de gatos</h1>
+      <h1 class="text-light mt-5 text-center main__texto">Cat - Gatos desaparecidos</h1>
 
       <section class="text-center d-flex flex-row justify-content-center flex-wrap align-items-center">
         <div class="row">
           <div class="col">
             <div class="card h-100" style="width: 18rem;">
-              <img class="card-img-top" src="../assets/img/randomCardImage.png" alt="Gato aleatório">
+              <img class="card-img-top" src="../assets/img/addCardImage.png" alt="Gato aleatório">
               <div class="card-body">
-                <h5 class="card-title">Aleatório</h5>
-                <p class="card-text">Veja a foto de um gato aleatório</p>
-                <a href="../telas/random.html" class="btn btn-warning">Ir até a página</a>
+                <h5 class="card-title">Adicionar</h5>
+                <p class="card-text">Adicione seu gato desaparecido</p>
+                <a href="../telas/add.html" class="btn btn-warning">Ir até a página</a>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card h-100" style="width: 18rem;">
-              <img class="card-img-top" src="../assets/img/specificCardImage.jpg" alt="Gato específico">
+              <img class="card-img-top" src="../assets/img/searchIcon.png" alt="Gato específico">
               <div class="card-body">
-                <h5 class="card-title">Específico</h5>
-                <p class="card-text">Veja a foto de um gato específico</p>
-                <a href="../telas/specific.html" class="btn btn-warning">Ir até a página</a>
+                <h5 class="card-title">Pesquisar</h5>
+                <p class="card-text">Pesquise sobre gatos desaparecidos e encontrados</p>
+                <a href="../telas/pesquisar.html" class="btn btn-warning">Ir até a página</a>
               </div>
             </div>
           </div>
           <div class="col">
             <div class="card h-100" style="width: 18rem;">
-              <img class="card-img-top" src="../assets/img/multipleCardImage.jpg" alt="Vários gatos">
+              <img class="card-img-top" src="../assets/img/mainIcon.webp" alt="Vários gatos">
               <div class="card-body">
-                <h5 class="card-title">Vários</h5>
-                <p class="card-text">Veja a foto de vários gatos ao mesmo tempo</p>
-                <a href="../telas/multiple.html" class="btn btn-warning">Ir até a página</a>
+                <h5 class="card-title">Sobre</h5>
+                <p class="card-text">Veja mais sobre o site e como você pode ajudar</p>
+                <a href="../telas/sobre.html" class="btn btn-warning">Ir até a página</a>
               </div>
             </div>
           </div>
