--- a/telas/sobre.html
+++ b/telas/sobre.html
@@ -18,8 +18,8 @@
             <nav class="navbar navbar-brand navbar-light bg-light">
                 <div class="container-fluid">
                   <a class="navbar-brand" href="index.html">
-                    <img src="../assets/img/multipleIcon.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
-                    Cat - Fotos
+                    <img src="../assets/img/pageIcon.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+                    Cat - Gatos desaparecidos
                   </a>
                 </div>
               </nav>
@@ -32,13 +32,13 @@
                 <a class="nav-link" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="random.html">Aleatório</a>
+                <a class="nav-link" href="add.html">Adicionar</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="specific.html">Específico</a>
+                <a class="nav-link" href="pesquisar.html">Pesquisar</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="multiple.html">| Múltiplos</a>
+                <a class="nav-link active" href="sobre.html">| Sobre</a>
               </li>
             </ul>
           </div>
@@ -46,7 +46,7 @@
     </nav>
 
     <main>
-      <h1 class="text-light mt-5 text-center main__texto">Múltiplos</h1>
+      <h1 class="text-light mt-5 text-center main__texto">Sobre</h1>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
