Alts das imagens

--- a/telas/index.html
+++ b/telas/index.html
@@ -18,7 +18,7 @@
             <nav class="navbar navbar-brand navbar-light bg-light">
                 <div class="container-fluid">
                   <a class="navbar-brand" href="index.html">
-                    <img src="../assets/img/pageIcon.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+                    <img src="../assets/img/pageIcon.png" alt="Ícone da página" width="30" height="24" class="d-inline-block align-text-top">
                     Cat - Gatos desaparecidos
                   </a>
                 </div>
@@ -52,7 +52,7 @@
         <div class="row">
           <div class="col">
             <div class="card h-100" style="width: 18rem;">
-              <img class="card-img-top" src="../assets/img/addCardImage.png" alt="Gato aleatório">
+              <img class="card-img-top" src="../assets/img/addCardImage.png" alt="Imagem sobre adicionar um gato">
               <div class="card-body">
                 <hr>
                 <h5 class="card-title">Adicionar</h5>
@@ -63,7 +63,7 @@
           </div>
           <div class="col">
             <div class="card h-100" style="width: 18rem;">
-              <img class="card-img-top" src="../assets/img/searchIcon.png" alt="Gato específico">
+              <img class="card-img-top" src="../assets/img/searchIcon.png" alt="Imagem sobre pesquisar um gato">
               <div class="card-body">
                 <hr>
                 <h5 class="card-title">Pesquisar</h5>
@@ -74,7 +74,7 @@
           </div>
           <div class="col">
             <div class="card h-100" style="width: 18rem;">
-              <img class="card-img-top" src="../assets/img/mainIcon.webp" alt="Vários gatos">
+              <img class="card-img-top" src="../assets/img/mainIcon.webp" alt="Imagem sobre saber mais sobre o site">
               <div class="card-body">
                 <hr>
                 <h5 class="card-title">Sobre</h5>
