--- a/telas/pesquisar.html
+++ b/telas/pesquisar.html
@@ -18,7 +18,7 @@
             <nav class="navbar navbar-brand navbar-light bg-light">
                 <div class="container-fluid">
                   <a class="navbar-brand" href="index.html">
-                    <img src="../assets/img/pageIcon.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
+                    <img src="../assets/img/pageIcon.png" alt="ícone da página" width="30" height="24" class="d-inline-block align-text-top">
                     Cat - Gatos desaparecidos
                   </a>
                 </div>
