Responsividade dos cards ajustada

--- a/telas/index.html
+++ b/telas/index.html
@@ -48,10 +48,10 @@
     <main>
       <h1 class="text-light mt-5 text-center main__texto">Cat - Gatos desaparecidos</h1>
 
-      <section class="text-center d-flex flex-row justify-content-center flex-wrap align-items-center">
-        <div class="row">
-          <div class="col">
-            <div class="card h-100" style="width: 18rem;">
+      <section class="text-center d-flex flex-row flex-wrap align-items-center">
+        <div class="row justify-content-center" style="margin: 0 auto;">
+          <div class="col-10 col-lg-3">
+            <div class="card h-100" style="width: auto">
               <img class="card-img-top" src="../assets/img/addCardImage.png" alt="Imagem sobre adicionar um gato">
               <div class="card-body">
                 <hr>
@@ -61,8 +61,8 @@
               </div>
             </div>
           </div>
-          <div class="col">
-            <div class="card h-100" style="width: 18rem;">
+          <div class="col-10 col-lg-3">
+            <div class="card h-100" style="width: auto">
               <img class="card-img-top" src="../assets/img/searchIcon.png" alt="Imagem sobre pesquisar um gato">
               <div class="card-body">
                 <hr>
@@ -72,8 +72,8 @@
               </div>
             </div>
           </div>
-          <div class="col">
-            <div class="card h-100" style="width: 18rem;">
+          <div class="col-10 col-lg-3">
+            <div class="card h-100" style="width: auto">
               <img class="card-img-top" src="../assets/img/mainIcon.webp" alt="Imagem sobre saber mais sobre o site">
               <div class="card-body">
                 <hr>
