--- a/telas/index.html
+++ b/telas/index.html
@@ -50,7 +50,7 @@
 
       <section class="text-center d-flex flex-row flex-wrap align-items-center">
         <div class="row justify-content-center" style="margin: 0 auto;">
-          <div class="col-10 col-lg-3">
+          <div class="cards__pagina--principal col-10 col-lg-3">
             <div class="card h-100" style="width: auto">
               <img class="card-img-top" src="../assets/img/addCardImage.png" alt="Imagem sobre adicionar um gato">
               <div class="card-body">
@@ -61,7 +61,7 @@
               </div>
             </div>
           </div>
-          <div class="col-10 col-lg-3">
+          <div class="cards__pagina--principal col-10 col-lg-3">
             <div class="card h-100" style="width: auto">
               <img class="card-img-top" src="../assets/img/searchIcon.png" alt="Imagem sobre pesquisar um gato">
               <div class="card-body">
@@ -72,7 +72,7 @@
               </div>
             </div>
           </div>
-          <div class="col-10 col-lg-3">
+          <div class="cards__pagina--principal col-10 col-lg-3">
             <div class="card h-100" style="width: auto">
               <img class="card-img-top" src="../assets/img/mainIcon.webp" alt="Imagem sobre saber mais sobre o site">
               <div class="card-body">
