--- a/telas/add.html
+++ b/telas/add.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid">
             <nav class="navbar navbar-brand navbar-light bg-light">
                 <div class="container-fluid">
@@ -46,7 +46,87 @@
     </nav>
 
     <main>
-      <h1 class="text-light mt-5 text-center main__texto">Adicionar</h1>
+      <h1 class="text-light text-center main__texto">Adicionar</h1>
+
+      <form class="d-flex flex-column text-center align-items-center mx-2 mb-5">
+        <div class="form__adicionar bg-light">
+
+          
+          <p class="informacao__form">Informações pessoais</p>
+          <div class="form-group mt-4">
+            <label for="inputNomePessoa">Seu nome:</label>
+            <input type="text" class="form-control" id="inputNomePessoa" placeholder="Seu nome aqui" required>
+          </div>
+          <div class="form-group mt-3">
+            <label for="inputEmail">E-mail para contato</label>
+            <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="email@dominio.com" required>
+            <small id="emailHelp" class="form-text text-muted">Nunca compartilharemos seu e-mail com ninguém.</small>
+          </div>
+          <div class="form-group mt-3">
+            <label for="inputTelefone">Telefone para contato</label>
+            <input type="number" class="form-control" id="inputTelefone" placeholder="(XX) XXXXX-XXXX" required>
+          </div>
+
+          <p class="informacao__form mt-5">Localização</p>
+          <div class="form-group mt-3">
+            <label for="inputCEP">CEP</label>
+            <input type="email" class="form-control" id="inputCEP" placeholder="XXXXX-XXX" required>
+          </div>
+          <div class="form-group mt-3">
+            <label for="inputEstado">Estado</label>
+            <input type="email" class="form-control" id="inputEstado" required>
+          </div>
+          <div class="form-group mt-3">
+            <label for="inputCidade">Cidade</label>
+            <input type="email" class="form-control" id="inputCidade" required>
+          </div>
+          <div class="form-group mt-3">
+            <label for="inputRua">Rua</label>
+            <input type="email" class="form-control" id="inputRua" required>
+          </div>
+          <div class="form-group mt-3">
+            <label for="inputBairro">Bairro</label>
+            <input type="email" class="form-control" id="inputBairro" required>
+          </div>
+
+          <p class="informacao__form mt-5">Informações do seu gato</p>
+          <div class="form-group mt-4">
+            <label for="inputNomeGato">Nome do seu gato:</label>
+            <input type="text" class="form-control" id="inputNomeGato" placeholder="Nome do seu gato" required>
+          </div>
+          <div class="mt-3">
+            <label>Gênero do seu gato: </label>
+            <div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" checked name="inputGenero" id="inputGenero1" value="inputGenero">
+                <label class="form-check-label" for="inputGenero1">M</label>
+              </div>
+              <div class="form-check form-check-inline mt-3">
+                <input class="form-check-input" type="radio" name="inputGenero" id="inputGenero2" value="inputGenero">
+                <label class="form-check-label" for="inputGenero2">F</label>
+              </div>
+            </div>
+          </div>
+          <div class="form-group mt-3">
+            <label for="inputCorPelo">Cor predominante do pelo:</label>
+            <select class="form-control" id="inputCorPelo">
+              <option>Branco</option>
+              <option>Preto</option>
+              <option>Laranja</option>
+              <option>Amarelo</option>
+              <option>Outro</option>
+            </select>
+          </div>
+          <div class="form-group mt-3">
+            <label for="inputRaca">Raça</label>
+            <input type="text" class="form-control" id="inputRaca" placeholder="Siamês, persa, vira-lata..." required>
+          </div>
+
+
+          <button type="submit" class="btn btn-primary mt-3">Enviar</button>
+
+        </div>
+      </form>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
