Adicionado uma pata de gato ao lado do texto dos botões

--- a/telas/index.html
+++ b/telas/index.html
@@ -57,7 +57,7 @@
                 <hr>
                 <h5 class="card-title">Adicionar</h5>
                 <p class="card-text">Adicione seu gato desaparecido</p>
-                <a href="../telas/add.html" class="btn btn-warning">Ir até a página</a>
+                <a href="../telas/add.html" class="btn btn-warning"><img class="imagem__botao" src="../assets/img/iconButton.png" alt="Imagem pata de gato"> Ir até a página</a>
               </div>
             </div>
           </div>
@@ -68,7 +68,7 @@
                 <hr>
                 <h5 class="card-title">Pesquisar</h5>
                 <p class="card-text">Pesquise sobre gatos desaparecidos e encontrados</p>
-                <a href="../telas/pesquisar.html" class="btn btn-warning">Ir até a página</a>
+                <a href="../telas/pesquisar.html" class="btn btn-warning"><img class="imagem__botao" src="../assets/img/iconButton.png" alt="Imagem pata de gato"> Ir até a página</a>
               </div>
             </div>
           </div>
@@ -79,7 +79,7 @@
                 <hr>
                 <h5 class="card-title">Sobre</h5>
                 <p class="card-text">Veja mais sobre o site e como você pode ajudar</p>
-                <a href="../telas/sobre.html" class="btn btn-warning">Ir até a página</a>
+                <a href="../telas/sobre.html" class="btn btn-warning"><img class="imagem__botao" src="../assets/img/iconButton.png" alt="Imagem pata de gato"> Ir até a página</a>
               </div>
             </div>
           </div>
