--- a/telas/index.html
+++ b/telas/index.html
@@ -48,7 +48,7 @@
     <main>
       <h1 class="text-light mt-5 text-center main__texto">Cat - Gatos desaparecidos</h1>
 
-      <section class="text-center d-flex flex-row flex-wrap align-items-center">
+      <section class="text-center d-flex flex-row flex-wrap align-items-center mb-4">
         <div class="row justify-content-center" style="margin: 0 auto;">
           <div class="cards__pagina--principal col-10 col-lg-3">
             <div class="card h-100" style="width: auto">
