Cards da página de pesquisa

--- a/telas/pesquisar.html
+++ b/telas/pesquisar.html
@@ -46,7 +46,33 @@
     </nav>
 
     <main>
-      <h1 class="text-light mt-5 text-center main__texto">Pesquisar</h1>
+      <h1 class="text-light text-center main__texto--pesquisa">Pesquisar</h1>
+      <section class="text-center d-flex flex-row flex-wrap align-items-center mb-4">
+        <div class="row justify-content-center" style="margin: 0 auto;">
+          <div class="cards__pagina--principal col-10 col-lg-6">
+            <div class="card h-100" style="width: auto">
+              <img class="card-img-top" src="../assets/img/idGatoCard.jpg" alt="Imagem sobre pesquisar por id">
+              <div class="card-body">
+                <hr>
+                <h5 class="card-title">Por ID</h5>
+                <p class="card-text">Pesquise gatos por identificação.</p>
+                <a href="../telas/add.html" class="btn btn-warning"><img class="imagem__botao" src="../assets/img/iconButton.png" alt="Imagem pata de gato"> Ir até a página</a>
+              </div>
+            </div>
+          </div>
+          <div class="cards__pagina--principal col-10 col-lg-6">
+            <div class="card h-100" style="width: auto">
+              <img class="card-img-top" src="../assets/img/cepGatoCard.jpg" alt="Imagem sobre pesquisar por CEP">
+              <div class="card-body">
+                <hr>
+                <h5 class="card-title">Por CEP</h5>
+                <p class="card-text">Pesquise gatos por CEP</p>
+                <a href="../telas/pesquisar.html" class="btn btn-warning mt-4"><img class="imagem__botao" src="../assets/img/iconButton.png" alt="Imagem pata de gato"> Ir até a página</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
