--- a/telas/sobre.html
+++ b/telas/sobre.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
 </head>
-<body>
+<body onload="carregaCarrossel()">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <nav class="navbar navbar-brand navbar-light bg-light">
@@ -46,10 +46,49 @@
     </nav>
 
     <main>
-      <h1 class="text-light mt-5 text-center main__texto">Sobre</h1>
+      <h1 class="text-light text-center main__texto--sobre">Sobre</h1>
+      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="" class="d-block w-75 fotoCarrossel" alt="">
+            <div class="carousel-caption d-none d-md-block">
+              <h5 class="textoCarrossel">Desaparecimentos</h5>
+              <p class="textoCarrossel">Os gatos são naturalmente curiosos, exploradores e caçadores, por este motivo podem sair de casa (a famosa voltinha) e retornar. Mas da mesma forma que retornam, podem não voltar.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="" class="d-block w-75 fotoCarrossel" alt="">
+            <div class="carousel-caption d-none d-md-block">
+              <h5 class="textoCarrossel">Gatos encontrados</h5>
+              <p class="textoCarrossel">372 gatos foram encontrados até o momento utilizando o nosso síte.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="" class="d-block w-75 fotoCarrossel" alt="">
+            <div class="carousel-caption d-none d-md-block">
+              <h5 class="textoCarrossel">Por que utilizar o site?</h5>
+              <p class="textoCarrossel">Tornar público o desaparecimento do seu animalzinho é algo que pode ajudar muito em sua busca. Quanto mais pessoas souberem sobre o seu pet desaparecido, maiores as chances de ele ser encontrado por alguém.</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="../assets/js/script.js"></script>
     <script src="../assets/js/APIcontroller.js"></script>
 
 </body>
