Responsividade mobile página sobre

--- a/telas/index.html
+++ b/telas/index.html
@@ -46,7 +46,7 @@
     </nav>
 
     <main>
-      <h1 class="text-light mt-5 text-center main__texto">Cat - Gatos desaparecidos</h1>
+      <h1 class="text-light text-center main__texto">Cat - Gatos desaparecidos</h1>
 
       <section class="text-center d-flex flex-row flex-wrap align-items-center mb-4">
         <div class="row justify-content-center" style="margin: 0 auto;">
