--- a/telas/pesquisar.html
+++ b/telas/pesquisar.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid">
             <nav class="navbar navbar-brand navbar-light bg-light">
                 <div class="container-fluid">
@@ -46,7 +46,7 @@
     </nav>
 
     <main>
-      <h1 class="text-light text-center main__texto--pesquisa">Pesquisar</h1>
+      <h1 class="text-light text-center main__texto">Pesquisar</h1>
       <section class="text-center d-flex flex-row flex-wrap align-items-center mb-4">
         <div class="row justify-content-center" style="margin: 0 auto;">
           <div class="cards__pagina--principal col-10 col-lg-6">
