--- a/telas/index.html
+++ b/telas/index.html
@@ -88,7 +88,7 @@
     </main>
 
     <footer>
-      <section class="footer">
+      <section class="footer navbar-static-bottom">
         <img class="footer__imagem" src="../assets/img/pageIcon.png" alt="Textura background">
         <p class="footer__texto">Cat &copy; 2022</p>
       </section>
