Criação de páginas de pesquisa

--- a/telas/pesquisar.html
+++ b/telas/pesquisar.html
@@ -56,7 +56,7 @@
                 <hr>
                 <h5 class="card-title">Por ID</h5>
                 <p class="card-text">Pesquise gatos por identificação.</p>
-                <a href="../telas/add.html" class="btn btn-warning"><img class="imagem__botao" src="../assets/img/iconButton.png" alt="Imagem pata de gato"> Ir até a página</a>
+                <a href="../telas/pesquisaID.html" class="btn btn-warning"><img class="imagem__botao" src="../assets/img/iconButton.png" alt="Imagem pata de gato"> Ir até a página</a>
               </div>
             </div>
           </div>
@@ -67,7 +67,7 @@
                 <hr>
                 <h5 class="card-title">Por CEP</h5>
                 <p class="card-text">Pesquise gatos por CEP</p>
-                <a href="../telas/pesquisar.html" class="btn btn-warning mt-4"><img class="imagem__botao" src="../assets/img/iconButton.png" alt="Imagem pata de gato"> Ir até a página</a>
+                <a href="../telas/pesquisaCEP.html" class="btn btn-warning mt-4"><img class="imagem__botao" src="../assets/img/iconButton.png" alt="Imagem pata de gato"> Ir até a página</a>
               </div>
             </div>
           </div>
