Mudança no item de pesquisa na navbar para dropdown

--- a/telas/index.html
+++ b/telas/index.html
@@ -34,8 +34,14 @@
               <li class="nav-item">
                 <a class="nav-link" href="add.html">Adicionar</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="pesquisar.html">Pesquisar</a>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="pesquisar.html" id="dropDownPesquisar" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Pesquisar
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="dropDownPesquisar">
+                  <li><a class="dropdown-item" href="pesquisaID.html">Por ID</a></li>
+                  <li><a class="dropdown-item" href="pesquisaCEP.html">Por CEP</a></li>
+                </ul>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="sobre.html">Sobre</a>
