--- a/telas/pesquisaID.html
+++ b/telas/pesquisaID.html
@@ -51,6 +51,9 @@
         </div>
     </nav>
 
+    <main>
+        <h1 class="text-light text-center main__texto">Pesquisar por ID</h1>
+    </main>
     
     <footer>
         <section class="footer navbar-static-bottom">
