Inputs para pesquisa

--- a/telas/pesquisaCEP.html
+++ b/telas/pesquisaCEP.html
@@ -51,7 +51,16 @@
         </div>
     </nav>
 
-    
+    <main>
+        <h1 class="text-light text-center main__texto">Pesquisar por CEP</h1>
+        <section class="d-flex justify-content-center align-items-centere">
+            <div class="input-group mb-3 area__pesquisar">
+                <input type="text" class="form-control" placeholder="Insira o CEP aqui" aria-label="Recipient's username" aria-describedby="button-addon2">
+                <button class="btn btn-outline-secondary botao__pesquisar" type="button" id="button-addon2">Pesquisar</button>
+            </div>
+        </section>
+    </main>
+
     <footer>
         <section class="footer navbar-static-bottom">
             <img class="footer__imagem" src="../assets/img/pageIcon.png" alt="Textura background">
