--- a/telas/pesquisaID.html
+++ b/telas/pesquisaID.html
@@ -53,6 +53,12 @@
 
     <main>
         <h1 class="text-light text-center main__texto">Pesquisar por ID</h1>
+        <section class="d-flex justify-content-center align-items-centere">
+            <div class="input-group mb-3 area__pesquisar">
+                <input type="text" class="form-control" placeholder="Insira o ID aqui" aria-label="Recipient's username" aria-describedby="button-addon2">
+                <button class="btn btn-outline-secondary botao__pesquisar" type="button" id="button-addon2">Pesquisar</button>
+            </div>
+        </section>
     </main>
     
     <footer>
@@ -60,7 +66,7 @@
           <img class="footer__imagem" src="../assets/img/pageIcon.png" alt="Textura background">
           <p class="footer__texto">Cat &copy; 2022</p>
         </section>
-      </footer>
+    </footer>
   
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
       <script src="../assets/js/APIcontroller.js"></script>
