--- a/telas/pesquisaID.html
+++ b/telas/pesquisaID.html
@@ -62,7 +62,7 @@
     </main>
     
     <footer>
-        <section class="footer navbar-static-bottom">
+        <section class="footer" style="position: fixed;">
           <img class="footer__imagem" src="../assets/img/pageIcon.png" alt="Textura background">
           <p class="footer__texto">Cat &copy; 2022</p>
         </section>
