Criado modelo simples de card para pesquisa

--- a/telas/pesquisaID.html
+++ b/telas/pesquisaID.html
@@ -59,10 +59,23 @@
                 <button class="btn btn-outline-secondary botao__pesquisar" type="button" id="button-addon2">Pesquisar</button>
             </div>
         </section>
+
+        <div class="card" style="width: 18rem;">
+            <img src="..." class="card-img-top imagem__gato__card" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Nome do Gato</h5>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">Encontrado? SIM!</li>
+              <li class="list-group-item">Perdido perto de: Rua teste 123</li>
+              <li class="list-group-item">Idade: 4 anos</li>
+              <li class="list-group-item">Cor predominante: Preto</li>
+            </ul>
+          </div>
     </main>
     
     <footer>
-        <section class="footer" style="position: fixed;">
+        <section class="footer">
           <img class="footer__imagem" src="../assets/img/pageIcon.png" alt="Textura background">
           <p class="footer__texto">Cat &copy; 2022</p>
         </section>
