Criado cards base páginas de pesquisa

--- a/telas/pesquisaID.html
+++ b/telas/pesquisaID.html
@@ -60,18 +60,49 @@
             </div>
         </section>
 
-        <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top imagem__gato__card" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Nome do Gato</h5>
+        <section class="text-center d-flex flex-row flex-wrap align-items-center mb-4">
+          <div class="row justify-content-center" style="margin: 0 auto;">
+            <div class="cards__pagina--principal col-10 col-lg-5">
+              <div class="card h-100" style="width: auto">
+                <img class="card-img-top" src="../assets/img/whiteBG.png" alt="Imagem sobre adicionar um gato">
+                <div class="card-body">
+                  <hr>
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item"></li>
+                    <li class="list-group-item"></li>
+                    <li class="list-group-item"></li>
+                  </ul>
+                </div>
+              </div>
             </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">Encontrado? SIM!</li>
-              <li class="list-group-item">Perdido perto de: Rua teste 123</li>
-              <li class="list-group-item">Idade: 4 anos</li>
-              <li class="list-group-item">Cor predominante: Preto</li>
-            </ul>
+            <div class="cards__pagina--principal col-10 col-lg-5">
+              <div class="card h-100" style="width: auto">
+                <img class="card-img-top" src="../assets/img/whiteBG.png" alt="Imagem sobre pesquisar um gato">
+                <div class="card-body">
+                  <hr>
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item"></li>
+                    <li class="list-group-item"></li>
+                    <li class="list-group-item"></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="cards__pagina--principal col-10 col-lg-5">
+              <div class="card h-100" style="width: auto">
+                <img class="card-img-top" src="../assets/img/whiteBG.png" alt="Imagem sobre saber mais sobre o site">
+                <div class="card-body">
+                  <hr>
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item"></li>
+                    <li class="list-group-item"></li>
+                    <li class="list-group-item"></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
           </div>
+        </section>
     </main>
     
     <footer>
