--- a/telas/pesquisaCEP.html
+++ b/telas/pesquisaCEP.html
@@ -59,6 +59,50 @@
                 <button class="btn btn-outline-secondary botao__pesquisar" type="button" id="button-addon2">Pesquisar</button>
             </div>
         </section>
+
+        <section class="text-center d-flex flex-row flex-wrap align-items-center mb-4">
+          <div class="row justify-content-center" style="margin: 0 auto;">
+            <div class="cards__pagina--principal col-10 col-lg-5">
+              <div class="card h-100" style="width: auto">
+                <img class="card-img-top" src="../assets/img/whiteBG.png" alt="Imagem sobre adicionar um gato">
+                <div class="card-body">
+                  <hr>
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item"></li>
+                    <li class="list-group-item"></li>
+                    <li class="list-group-item"></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="cards__pagina--principal col-10 col-lg-5">
+              <div class="card h-100" style="width: auto">
+                <img class="card-img-top" src="../assets/img/whiteBG.png" alt="Imagem sobre pesquisar um gato">
+                <div class="card-body">
+                  <hr>
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item"></li>
+                    <li class="list-group-item"></li>
+                    <li class="list-group-item"></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="cards__pagina--principal col-10 col-lg-5">
+              <div class="card h-100" style="width: auto">
+                <img class="card-img-top" src="../assets/img/whiteBG.png" alt="Imagem sobre saber mais sobre o site">
+                <div class="card-body">
+                  <hr>
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item"></li>
+                    <li class="list-group-item"></li>
+                    <li class="list-group-item"></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
     </main>
 
     <footer>
