--- a/telas/pesquisaCEP.html
+++ b/telas/pesquisaCEP.html
@@ -56,63 +56,69 @@
         <section class="d-flex justify-content-center align-items-centere">
             <div class="input-group mb-3 area__pesquisar">
                 <input type="text" class="form-control" placeholder="Insira o CEP aqui" aria-label="Recipient's username" aria-describedby="button-addon2">
-                <button class="btn btn-outline-secondary botao__pesquisar" type="button" id="button-addon2">Pesquisar</button>
+                <button onclick="gatoPorCEP()" class="btn btn-outline-secondary botao__pesquisar" type="button" id="button-addon2">Pesquisar</button>
             </div>
         </section>
 
-        <section class="text-center d-flex flex-row flex-wrap align-items-center mb-4">
-          <div class="row justify-content-center" style="margin: 0 auto;">
-            <div class="cards__pagina--principal col-10 col-lg-5">
-              <div class="card h-100" style="width: auto">
-                <img class="card-img-top" src="../assets/img/whiteBG.png" alt="Imagem sobre adicionar um gato">
+        <section class="text-center d-flex flex-row flex-wrap align-items-center justify-content-center mb-4">
+          <div class="row justify-content-center" style="margin: 0 30px;">
+            <div class="cards__pagina--principal col-10 col-lg-12">
+              <div class="card h-100">
+                <img class="card-img-top imagemGato" src="../assets/img/whiteBG.png" alt="Imagem do gato">
                 <div class="card-body">
                   <hr>
                   <ul class="list-group list-group-flush">
-                    <li class="list-group-item"></li>
-                    <li class="list-group-item"></li>
-                    <li class="list-group-item"></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="cards__pagina--principal col-10 col-lg-5">
-              <div class="card h-100" style="width: auto">
-                <img class="card-img-top" src="../assets/img/whiteBG.png" alt="Imagem sobre pesquisar um gato">
-                <div class="card-body">
-                  <hr>
-                  <ul class="list-group list-group-flush">
-                    <li class="list-group-item"></li>
-                    <li class="list-group-item"></li>
-                    <li class="list-group-item"></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <div class="cards__pagina--principal col-10 col-lg-5">
-              <div class="card h-100" style="width: auto">
-                <img class="card-img-top" src="../assets/img/whiteBG.png" alt="Imagem sobre saber mais sobre o site">
-                <div class="card-body">
-                  <hr>
-                  <ul class="list-group list-group-flush">
-                    <li class="list-group-item"></li>
-                    <li class="list-group-item"></li>
-                    <li class="list-group-item"></li>
+                    <li class="list-group-item nomeGato"></li>
+                    <li class="list-group-item encontrado"></li>
+                    <li class="list-group-item dataPerdido"></li>
                   </ul>
                 </div>
               </div>
             </div>
           </div>
+          <div class="row justify-content-center" style="margin: 0 30px;">
+            <div class="cards__pagina--principal col-10 col-lg-12">
+              <div class="card h-100">
+                <img class="card-img-top imagemGato" src="../assets/img/whiteBG.png" alt="Imagem do gato">
+                <div class="card-body">
+                  <hr>
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item nomeGato"></li>
+                    <li class="list-group-item encontrado"></li>
+                    <li class="list-group-item dataPerdido"></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row justify-content-center" style="margin: 0 30px;">
+            <div class="cards__pagina--principal col-10 col-lg-12">
+              <div class="card h-100">
+                <img class="card-img-top imagemGato" src="../assets/img/whiteBG.png" alt="Imagem do gato">
+                <div class="card-body">
+                  <hr>
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item nomeGato"></li>
+                    <li class="list-group-item encontrado"></li>
+                    <li class="list-group-item dataPerdido"></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+          </div>
         </section>
     </main>
 
     <footer>
-        <section class="footer" style="position: fixed;">
+        <section class="footer" style="position: relative;">
             <img class="footer__imagem" src="../assets/img/pageIcon.png" alt="Textura background">
             <p class="footer__texto">Cat &copy; 2022</p>
         </section>
     </footer>
   
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+      <script src="../assets/js/script.js"></script>
       <script src="../assets/js/APIcontroller.js"></script>
   </body>
 </html>
