Adicionado localidade + api viacep

--- a/telas/pesquisaCEP.html
+++ b/telas/pesquisaCEP.html
@@ -55,7 +55,7 @@
         <h1 class="text-light text-center main__texto">Pesquisar por CEP</h1>
         <section class="d-flex justify-content-center align-items-centere">
             <div class="input-group mb-3 area__pesquisar">
-                <input type="text" class="form-control" placeholder="Insira o CEP aqui" aria-label="Recipient's username" aria-describedby="button-addon2">
+                <input id="inputCEP" type="text" class="form-control" placeholder="Insira o CEP aqui" aria-label="Recipient's username" aria-describedby="button-addon2">
                 <button onclick="gatoPorCEP()" class="btn btn-outline-secondary botao__pesquisar" type="button" id="button-addon2">Pesquisar</button>
             </div>
         </section>
@@ -71,6 +71,7 @@
                     <li class="list-group-item nomeGato"></li>
                     <li class="list-group-item encontrado"></li>
                     <li class="list-group-item dataPerdido"></li>
+                    <li class="list-group-item localidade"></li>
                   </ul>
                 </div>
               </div>
@@ -86,6 +87,7 @@
                     <li class="list-group-item nomeGato"></li>
                     <li class="list-group-item encontrado"></li>
                     <li class="list-group-item dataPerdido"></li>
+                    <li class="list-group-item localidade"></li>
                   </ul>
                 </div>
               </div>
@@ -101,6 +103,7 @@
                     <li class="list-group-item nomeGato"></li>
                     <li class="list-group-item encontrado"></li>
                     <li class="list-group-item dataPerdido"></li>
+                    <li class="list-group-item localidade"></li>
                   </ul>
                 </div>
               </div>
