--- a/telas/add.html
+++ b/telas/add.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
 </head>
-<body onload="funcTeste()">
+<body onload="adicionaListeners()">
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid">
             <nav class="navbar navbar-brand navbar-light bg-light">
@@ -66,7 +66,7 @@
           </div>
           <div class="form-group mt-3">
             <label for="inputEmail">E-mail para contato</label>
-            <input data-input="email" type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="email@dominio.com" pattern="/^[a-z0-9.]+@[a-z0-9]+\.[a-z]+\.([a-z]+)?$/i" required>
+            <input data-input="email" type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="email@dominio.com" pattern="^([\w-]\.?)+@([\w-]+\.)+([A-Za-z]{2,4})+$" required>
             <p data-mensagemErro="email" class="error"></p>
             <small id="emailHelp" class="form-text text-muted">Nunca compartilharemos seu e-mail com ninguém.</small>
           </div>
