Envio do formulário funcionando

--- a/telas/add.html
+++ b/telas/add.html
@@ -139,7 +139,7 @@
           </div>
 
 
-          <button onclick="enviarDados()" type="submit" class="btn btn-primary mt-3">Enviar</button>
+          <button data-type="enviar" type="submit" class="btn btn-primary mt-3">Enviar</button>
 
         </div>
       </form>
