--- a/telas/pesquisaCEP.html
+++ b/telas/pesquisaCEP.html
@@ -19,7 +19,7 @@
                 <div class="container-fluid">
                   <a class="navbar-brand" href="index.html">
                     <img src="../assets/img/pageIcon.png" alt="Ícone da página" width="30" height="24" class="d-inline-block align-text-top">
-                    Cat - Gatos desaparecidos
+                    Cat <span class="brand_desc">- Gatos desaparecidos</span>
                   </a>
                 </div>
               </nav>
