Ajeitando imagens página sobre

--- a/telas/sobre.html
+++ b/telas/sobre.html
@@ -61,21 +61,21 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="" class="d-block mw-75 fotoCarrossel" alt="">
+            <img src="" class="d-block w-75 vh-50 fotoCarrossel" alt="">
             <div class="carousel-caption d-none d-md-block">
               <h5 class="textoCarrossel">Desaparecimentos</h5>
               <p class="textoCarrossel">Os gatos são naturalmente curiosos, exploradores e caçadores, por este motivo podem sair de casa (a famosa voltinha) e retornar. Mas da mesma forma que retornam, podem não voltar.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="" class="d-block mw-75 fotoCarrossel" alt="">
+            <img src="" class="d-block w-75 vh-50 fotoCarrossel" alt="">
             <div class="carousel-caption d-none d-md-block">
               <h5 class="textoCarrossel">Gatos encontrados</h5>
               <p class="textoCarrossel">372 gatos foram encontrados até o momento utilizando o nosso síte.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="" class="d-block mw-75 fotoCarrossel" alt="">
+            <img src="" class="d-block w-75 vh-50 fotoCarrossel" alt="">
             <div class="carousel-caption d-none d-md-block">
               <h5 class="textoCarrossel">Por que utilizar o site?</h5>
               <p class="textoCarrossel">Tornar público o desaparecimento do seu animalzinho é algo que pode ajudar muito em sua busca. Quanto mais pessoas souberem sobre o seu pet desaparecido, maiores as chances de ele ser encontrado por alguém.</p>
